--- a/indecision-app/src/styles/base/_base.scss
+++ b/indecision-app/src/styles/base/_base.scss
@@ -7,3 +7,11 @@ body {
     font-size: $m-size;
     background: $body-background;
 }
+
+button {
+    cursor: pointer;
+}
+
+button:disabled {
+    cursor: default;
+}
