--- a/indecision-app/src/styles/components/_button.scss
+++ b/indecision-app/src/styles/components/_button.scss
@@ -5,7 +5,7 @@
     color: white;
     font-weight: bold;
     font-size: $l-size;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-size;
     padding: 2.4rem;
     width: 100%;
 }
@@ -30,5 +30,9 @@
     padding: 0;
 }
 
-//bem
+@media (min-width: $desktop-breakpoint) {
+    .big-button {
+        margin-bottom: $xl-size;
+    }
+}
 
