--- a/expensify-app/src/styles/components/_box-layout.scss
+++ b/expensify-app/src/styles/components/_box-layout.scss
@@ -9,4 +9,13 @@
 
 .box-layout__box {
     background: fade-out(white, .15);
+    border-radius: 3px;
+    padding: $l-size $m-size;
+    text-align: center;
+    width: 25rem;
+}
+
+.box_layout__title {
+    margin: 0 0 $m-size 0;
+    line-height: 1;
 }
