--- a/expensify-app/src/styles/components/_box-layout.scss
+++ b/expensify-app/src/styles/components/_box-layout.scss
@@ -2,10 +2,12 @@
     background: url("/images/bg.jpg");
     background-size: cover;
     display: flex;
-    height: 10vh;
+    height: 100vh;
     justify-content: center;
     width: 100vw;
+    align-items:center;
 }
+
 
 .box-layout__box {
     background: fade-out(white, .15);
@@ -13,6 +15,7 @@
     padding: $l-size $m-size;
     text-align: center;
     width: 25rem;
+    height:auto;
 }
 
 .box_layout__title {
